# test

./: .env  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html
app/: admin.py  models.py  urls.py  views.py
app/static/app/: script.js  styles.css
app/templates/app/: api.html  index.html  layout.html
config/: settings.py  urls.py
